fix: content text overflow

--- a/read_post.css
+++ b/read_post.css
@@ -33,6 +33,7 @@
 
     padding: 0.5em;
     margin: 2em;
+    word-wrap: break-word;
 }
 
 .news {
